Fixed bugs on bar button disappeared and has extra space.

--- a/jqtouch/jqtouch.css
+++ b/jqtouch/jqtouch.css
@@ -102,11 +102,10 @@ only screen and (min-device-width: 1024px) {
     }
 }
 
-#jqt > .current, #jqt > .smokedglass, #jqt > .clearglass {
+#jqt > .current,
+#jqt > .smokedglass, #jqt > .clearglass {
     display: block;
-    display: -webkit-box;
-    display: -moz-box;
-    display: box;
+    display: -webkit-box; display: -moz-box; display: box;
 }
 
 #jqt > .current.alphapage .hideonalpha,
